codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_prompt_fork_modal.snap
---
source: tui/src/cwd_prompt.rs
expression: terminal.backend()
---

请选择用于分叉该会话的工作目录

  会话目录 = 分叉会话里记录的最新工作目录                                       
  当前目录 = 你现在的工作目录

› 1. 使用会话目录（/Users/example/session）                                     
  2. 使用当前目录（/Users/example/current）

  按 enter 继续
